<resources>
    <string name="app_name">XperiSettings</string>

    <string name="display_header">Display Settings</string>
    <string name="switch_display_title">Enable/Disable Creator Mode</string>
    <string name="display_description">Enables the BT.2020 Color Gamut and 10-bit Color </string>

    <string name="about">About</string>
    <string name="about_dialog">Made By EggOxygen\n\nI am NOT responsible for bricked devices!\n\nEGG | BBN | OCD</string>
    <string name="about_header">Credits</string>
    <string name="about_title">About</string>

    <string name="display_dashboard_summary">Creator Mode setting</string>
</resources>
